# pet-filter

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: firmware.yml
docs/branding/: brand-identity.md  go-to-market.md  ideal-customer-avatar.md  pricing-strategy.md
docs/business/: business-case.md  manufacturing-strategy.md  regulatory-compliance.md  unit-economics.md
docs/engineering/: bom-estimate.md  circuit-design.md  filtration-subsystem.md  noise-analysis.md  power-budget.md  sourcing-strategy.md  system-architecture.md  uvc-subsystem.md  venturi-design.md
docs/firmware/: work-breakdown.md
docs/research/: competitor-landscape.md  market-analysis.md  odor-chemistry.md  purbright-legacy-analysis.md  technology-validation.md
firmware/: Cargo.toml  build.rs  diagram.json  justfile  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
firmware/.cargo/: config.toml
firmware/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
firmware/fuzz/: Cargo.toml
firmware/fuzz/fuzz_targets/: fuzz_auth_psk.rs  fuzz_crash_log.rs  fuzz_frame_decoder.rs
firmware/schemas/: petfilter.fbs
firmware/scripts/: wokwi-ci.sh  wokwi-host-bridge.sh
firmware/src/: config.rs  diagnostics.rs  error.rs  esp_link_shims.rs  events.rs  lib.rs  main.rs  pins.rs  power.rs  safety.rs  scheduler.rs
firmware/src/adapters/: ble.rs  ble_transport.rs  cert_store.rs  device_id.rs  hardware.rs  log_sink.rs  mdns.rs  mod.rs  nvs.rs  rpc_adapter.rs  time.rs  utils.rs  wifi.rs
firmware/src/adapters/tls_transport/: esp_impl.rs  mod.rs
firmware/src/app/: commands.rs  events.rs  mod.rs  ports.rs  service.rs
firmware/src/control/: mod.rs  pid.rs
firmware/src/drivers/: button.rs  hw_init.rs  hw_timer.rs  led_patterns.rs  mod.rs  pump.rs  status_led.rs  task_pin.rs  uvc.rs  watchdog.rs
firmware/src/fsm/: context.rs  mod.rs  states.rs
firmware/src/rpc/: auth.rs  channels.rs  chunked.rs  codec.rs  compress.rs  engine.rs  fb.rs  io_task.rs  mod.rs  ota.rs  stream.rs  transport.rs
firmware/src/sensors/: ammonia.rs  flow.rs  mod.rs  temperature.rs  water_level.rs
firmware/tests/: app_service_integration.rs  property_tests.rs  rpc_auth_integration.rs
firmware/tests/integration/: app_service_tests.rs  auth_tests.rs  main.rs  mock_hw.rs  provisioning_flow_tests.rs
firmware/tests/qemu/: boot_verify.sh
firmware/ulp/: CMakeLists.txt
firmware/ulp_nh3_component/: CMakeLists.txt  ulp_exports.c  ulp_nh3_monitor.c
hardware/: Dockerfile  docker-compose.yml
hardware/cad/: housing-design-spec.md
hardware/pcb/: Makefile  fp-lib-table  kibot.yaml  mcu.kicad_sch  motor_driver.kicad_sch  petfilter.kicad_pcb  petfilter.kicad_pro  petfilter.kicad_sch  power.kicad_sch  sensors.kicad_sch  sym-lib-table  uvc_driver.kicad_sch
hardware/pcb/libraries/: LIBRARY_MAP.md  petfilter.kicad_sym
hardware/pcb/libraries/petfilter.pretty/: MQ-137.kicad_mod  SOT-89-5.kicad_mod
tools/: gen_schematics.py  kicad_libgen.py
